--- a/style2.htm
+++ b/style2.htm
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      /* Stylesheet 1: */
       body {
-        font: 100% Lucida Sans, Verdana;
+        font: 100% Courier New;
         margin: 20px;
         line-height: 26px;
+        background-color: #000000;
       }
 
       .container {
@@ -21,44 +21,33 @@
         overflow: auto;
       }
 
-      #top,
-      #sidebar,
-      #bottom,
-      .menuitem {
-        border-radius: 4px;
-        margin: 4px;
-      }
-
       #top {
-        background-color: #04aa6d;
-        color: #ffffff;
+        color: #84c754;
         padding: 15px;
-      }
-
-      #menubar {
-        width: 200px;
-        float: left;
       }
 
       #main {
         padding: 10px;
-        margin: 0 210px;
+        color: #84c754;
       }
 
       #sidebar {
-        background-color: #32a4e7;
         color: #ffffff;
+        border: 1px solid #ffffff;
+        border-radius: 4px;
         padding: 10px;
-        width: 180px;
-        bottom: 0;
+        width: 320px;
         top: 0;
         right: 0;
         position: absolute;
+        font-size: 80%;
+        line-height: 20px;
       }
 
       #bottom {
-        border: 1px solid #d4d4d4;
-        background-color: #f1f1f1;
+        border: 1px solid #ffffff;
+        border-radius: 4px;
+        color: #ffffff;
         text-align: center;
         padding: 10px;
         font-size: 70%;
@@ -66,56 +55,36 @@
       }
 
       #top h1,
-      #top p,
-      #menulist {
+      #top p {
         margin: 0;
-        padding: 0;
       }
 
       .menuitem {
-        background-color: #f1f1f1;
-        border: 1px solid #d4d4d4;
-        list-style-type: none;
-        padding: 2px;
+        color: #84c754;
         cursor: pointer;
       }
 
-      .menuitem:hover {
-        background-color: #ffffff;
-      }
-
-      .menuitem:first-child {
-        background-color: #04aa6d;
+      .menuitem:nth-child(2) {
         color: white;
         font-weight: bold;
       }
 
+      .menuitem:hover {
+        color: #ffffff;
+      }
+
       a {
-        color: #000000;
-        text-decoration: underline;
+        color: #ffffff;
       }
 
       a:hover {
-        text-decoration: none;
+        color: #84c754;
       }
-
-      @media (max-width: 800px) {
+      @media (max-width: 600px) {
         #sidebar {
           width: auto;
+          margin-bottom: 10px;
           position: relative;
-        }
-        #main {
-          margin-right: 0;
-        }
-      }
-
-      @media (max-width: 600px) {
-        #menubar {
-          width: auto;
-          float: none;
-        }
-        #main {
-          margin: 0;
         }
       }
     </style>
@@ -129,8 +98,18 @@
       <div class="wrapper">
         <div id="menubar">
           <ul id="menulist">
-            <li class="menuitem" onclick="reStyle(0)">Stylesheet 1</li>
-            <li class="menuitem" onclick="reStyle(1)">Stylesheet 2</li>
+            <li class="menuitem" onclick="location.href='style1.htm'">
+              Stylesheet 1
+            </li>
+            <li class="menuitem" onclick="location.href='style2.htm'">
+              Stylesheet 2
+            </li>
+            <li class="menuitem" onclick="location.href='example.htm'">
+              Bootstrap Example
+            </li>
+            <li class="menuitem" onclick="location.href='index.htm'">
+              No Stylesheet
+            </li>
           </ul>
         </div>
         <div id="main">
@@ -139,9 +118,16 @@
             This is a demonstration of how different stylesheets can change the
             layout of your HTML page. You can change the layout of this page by
             selecting different stylesheets in the menu, or by selecting one of
-            the following links:<br />
-            <a href="#" onclick="reStyle(0);return false">Stylesheet1</a>,
-            <a href="#" onclick="reStyle(1);return false">Stylesheet2</a>,
+            the following links (including No Style):<br />
+            <a href="style1.htm">Stylesheet1</a>,
+            <a href="style2.htm">Stylesheet2</a>,
+            <a href="example.htm">Example</a>.
+          </p>
+          <h2>No Styles</h2>
+          <p>
+            This page uses DIV elements to group different sections of the HTML
+            page. Click here to see how the page looks like with no
+            stylesheet:<br /><a href="index.htm">No Stylesheet</a>.
           </p>
         </div>
         <div id="sidebar">
